--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -1,30 +1,26 @@
 description: This is a compilation list of all CONTRIBUTORS across different objects (data models) alphabetically ordered. All fields are non mandatory
 contributors:
--
- name: Jose M.
- surname: Cantera
- mail: jmcanterafonseca4github@gmail.com
- organization: CanteraFonseca.EU
- project: 
- comments: 
--
- name: Dmitrii
- surname:  Demin
- mail: mail@demin.co
- organization:
- project: 
- comments: 
--
- name: Jason
- surname: Fox
- mail:
- organization: Fiware
- project: 
- comments:
--
- name: Joud
- surname: Sayed Issa
- mail: joudsayedissa@gmail.com
- organization:
- project: 
- comments: 
+  - name: Jose M.
+    surname: Cantera
+    mail: jmcanterafonseca4github@gmail.com
+    organization: CanteraFonseca.EU
+    project: null
+    comments: null
+  - name: Dmitrii
+    surname: Demin
+    mail: mail@demin.co
+    organization: null
+    project: null
+    comments: null
+  - name: Jason
+    surname: Fox
+    mail: null
+    organization: Fiware
+    project: null
+    comments: null
+  - name: Joud
+    surname: Sayed Issa
+    mail: joudsayedissa@gmail.com
+    organization: null
+    project: null
+    comments: null
