--- a/SmartSpot/model.yaml
+++ b/SmartSpot/model.yaml
@@ -1,11 +1,15 @@
 SmartSpot:
+
   description: Smart Data models Smart Spot entity schema intended for validation tools
+
   properties:
+
     alternateName:
       description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
+
     announcedUrl:
       description: URL broadcasted by the device
       format: uri
@@ -13,6 +17,7 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/URL
         type: Property
+
     announcementPeriod:
       description: Period between announcements in milliseconds
       maximum: 4000
@@ -21,18 +26,20 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     availability:
-      description: 'Specifies the time intervals in which this interactive service is available, but this is a general information while Smart Spots have their own real availability in order to allow advanced configurations'
+      description: Specifies the time intervals in which this interactive service is available, but this is a general information while Smart Spots have their own real availability in order to allow advanced configurations
       type: string
       x-ngsi:
         model: https://schema.org/openingHours
         type: Property
+
     bluetoothChannel:
       description: Bluetooth channels where to transmit the announcement
       enum:
-        - 37
-        - 38
-        - 39
+        - '37'
+        - '38'
+        - '39'
         - 37,38
         - 38,39
         - 37,39
@@ -41,6 +48,7 @@ SmartSpot:
       x-ngsi:
         model: ' https://schema.org/Text'
         type: Property
+
     coverageRadius:
       description: Radius of the spot coverage area in meters
       minimum: 1
@@ -48,68 +56,99 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/Number
         type: Property
+
     dataProvider:
-      description: A sequence of characters identifying the provider of the harmonised data entity.
+      description: A sequence of characters identifying the provider of the harmonised data entity
       type: string
       x-ngsi:
         type: Property
+
     dateCreated:
-      description: Entity creation timestamp. This will usually be allocated by the storage platform.
+      description: Entity creation timestamp. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     dateModified:
-      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.
+      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     description:
       description: A description of this item
       type: string
       x-ngsi:
         type: Property
+
     id:
-      anyOf: &smartspot_-_properties_-_owner_-_items_-_anyof
-        - description: Property. Identifier format of any NGSI entity
+      anyOf:
+        - description: Identifier format of any NGSI entity
           maxLength: 256
           minLength: 1
           pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
           type: string
-        - description: Property. Identifier format of any NGSI entity
+          x-ngsi:
+            type: Property
+        - description: Identifier format of any NGSI entity
           format: uri
           type: string
+          x-ngsi:
+            type: Property
       description: Unique identifier of the entity
       x-ngsi:
         type: Property
+
     name:
-      description: The name of this item.
+      description: The name of this item
       type: string
       x-ngsi:
         type: Property
+
     owner:
       description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
-        anyOf: *smartspot_-_properties_-_owner_-_items_-_anyof
-        description: Property. Unique identifier of the entity
+        anyOf:
+          - description: Identifier format of any NGSI entity
+            maxLength: 256
+            minLength: 1
+            pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
+            type: string
+            x-ngsi:
+              type: Property
+          - description: Identifier format of any NGSI entity
+            format: uri
+            type: string
+            x-ngsi:
+              type: Property
+        description: Unique identifier of the entity
+        x-ngsi:
+          type: Property
       type: array
       x-ngsi:
         type: Property
+
     refSmartPointOfInteraction:
       anyOf:
-        - description: Property. Identifier format of any NGSI entity
+        - description: Identifier format of any NGSI entity
           maxLength: 256
           minLength: 1
           pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
           type: string
-        - description: Property. Identifier format of any NGSI entity
+          x-ngsi:
+            type: Property
+        - description: Identifier format of any NGSI entity
           format: uri
           type: string
+          x-ngsi:
+            type: Property
       description: Reference to the Smart Point of Interaction which includes this Smart Spot
       x-ngsi:
         model: https://schema.org/URL
         type: Relationship
+
     seeAlso:
       description: list of uri pointing to additional resources about the item
       oneOf:
@@ -122,8 +161,9 @@ SmartSpot:
           type: string
       x-ngsi:
         type: Property
+
     signalStrength:
-      description: 'Signal strength to adjust the announcement range. Enum:''highest, lowest, medium'''
+      description: Signal strength to adjust the announcement range. Enum:'highest, lowest, medium'
       enum:
         - highest
         - lowest
@@ -131,11 +171,13 @@ SmartSpot:
       type: string
       x-ngsi:
         type: Property
+
     source:
-      description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
+      description: A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object
       type: string
       x-ngsi:
         type: Property
+
     type:
       description: NGSI Entity type. It has to be SmartSpot
       enum:
@@ -143,13 +185,21 @@ SmartSpot:
       type: string
       x-ngsi:
         type: Property
+
   required:
     - id
     - type
+
   type: object
-  x-derived-from: ""
-  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
+
+  x-derived-from: ''
+
+  x-disclaimer: Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program
+
   x-license-url: https://github.com/smart-data-models/dataModel.PointOfInteraction/blob/master/SmartSpot/LICENSE.md
+
   x-model-schema: https://smart-data-models.github.io/dataModel.PointOfInteraction/SmartSpot/schema.json
-  x-model-tags: ""
+
+  x-model-tags: ''
+
   x-version: 0.1.0
