--- a/SmartSpot/model.yaml
+++ b/SmartSpot/model.yaml
@@ -1,15 +1,11 @@
 SmartSpot:
-
   description: Smart Data models Smart Spot entity schema intended for validation tools
-
   properties:
-
     alternateName:
       description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
-
     announcedUrl:
       description: URL broadcasted by the device
       format: uri
@@ -17,7 +13,6 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/URL
         type: Property
-
     announcementPeriod:
       description: Period between announcements in milliseconds
       maximum: 4000
@@ -26,20 +21,18 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/Number
         type: Property
-
     availability:
-      description: Specifies the time intervals in which this interactive service is available, but this is a general information while Smart Spots have their own real availability in order to allow advanced configurations
+      description: 'Specifies the time intervals in which this interactive service is available, but this is a general information while Smart Spots have their own real availability in order to allow advanced configurations'
       type: string
       x-ngsi:
         model: https://schema.org/openingHours
         type: Property
-
     bluetoothChannel:
       description: Bluetooth channels where to transmit the announcement
       enum:
-        - '37'
-        - '38'
-        - '39'
+        - 37
+        - 38
+        - 39
         - 37,38
         - 38,39
         - 37,39
@@ -48,7 +41,6 @@ SmartSpot:
       x-ngsi:
         model: ' https://schema.org/Text'
         type: Property
-
     coverageRadius:
       description: Radius of the spot coverage area in meters
       minimum: 1
@@ -56,33 +48,28 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/Number
         type: Property
-
     dataProvider:
       description: A sequence of characters identifying the provider of the harmonised data entity
       type: string
       x-ngsi:
         type: Property
-
     dateCreated:
       description: Entity creation timestamp. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     dateModified:
       description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
-
     description:
       description: A description of this item
       type: string
       x-ngsi:
         type: Property
-
     id:
       anyOf:
         - description: Identifier format of any NGSI entity
@@ -100,13 +87,11 @@ SmartSpot:
       description: Unique identifier of the entity
       x-ngsi:
         type: Property
-
     name:
       description: The name of this item
       type: string
       x-ngsi:
         type: Property
-
     owner:
       description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
@@ -129,7 +114,6 @@ SmartSpot:
       type: array
       x-ngsi:
         type: Property
-
     refSmartPointOfInteraction:
       anyOf:
         - description: Identifier format of any NGSI entity
@@ -148,7 +132,6 @@ SmartSpot:
       x-ngsi:
         model: https://schema.org/URL
         type: Relationship
-
     seeAlso:
       description: list of uri pointing to additional resources about the item
       oneOf:
@@ -161,9 +144,8 @@ SmartSpot:
           type: string
       x-ngsi:
         type: Property
-
     signalStrength:
-      description: Signal strength to adjust the announcement range. Enum:'highest, lowest, medium'
+      description: 'Signal strength to adjust the announcement range. Enum:''highest, lowest, medium'''
       enum:
         - highest
         - lowest
@@ -171,13 +153,11 @@ SmartSpot:
       type: string
       x-ngsi:
         type: Property
-
     source:
-      description: A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object
+      description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object'
       type: string
       x-ngsi:
         type: Property
-
     type:
       description: NGSI Entity type. It has to be SmartSpot
       enum:
@@ -185,21 +165,13 @@ SmartSpot:
       type: string
       x-ngsi:
         type: Property
-
   required:
     - id
     - type
-
   type: object
-
-  x-derived-from: ''
-
-  x-disclaimer: Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program
-
+  x-derived-from: ""
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.PointOfInteraction/blob/master/SmartSpot/LICENSE.md
-
   x-model-schema: https://smart-data-models.github.io/dataModel.PointOfInteraction/SmartSpot/schema.json
-
-  x-model-tags: ''
-
+  x-model-tags: ""
   x-version: 0.1.0
